# gazebo_rotating_lidar

./: CMakeLists.txt  package.xml  sensors.xml
include/gazebo_rotating_lidar/: RotatingLidarRosPlugin.h  RotatingLidarSensor.h  ScanIterator.h
src/: RotatingLidarRosPlugin.cpp  RotatingLidarSensor.cpp  ScanIterator.cpp
test/: test_scan_iterator.cpp
