<?xml version="1.0"?>
<package format="2">
  <name>gazebo_rotating_lidar</name>
  <version>1.0.0</version>
  <description>Gazebo Lidar sensor which accounts for scanning plane motion during a single scan</description>
  <url type="website">https://github.com/peci1/gazebo_rotating_lidar</url>

  <license>BSD</license>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>

  <exec_depend>gazebo_custom_sensor_preloader</exec_depend>

  <build_depend>boost</build_depend>

  <export>
    <gazebo_custom_sensor_preloader plugin="${prefix}/sensors.xml" />
  </export>
</package>
